# UFO_CMake

./: README.md
build_tools/: IMPORTANT.txt
build_tools/Linux/: config.json  run_cmake.sh  run_executable.sh  run_tests.sh
build_tools/Linux/toolchains/: GCC.cmake
build_tools/MacOS/: config.json  run_cmake.sh  run_executable.sh  run_tests.sh
build_tools/MacOS/toolchains/: GCC.cmake  MinGW.cmake
build_tools/Windows/: config.json  run_cmake.cmd  run_executable.cmd  run_tests.cmd
build_tools/Windows/toolchains/: MSVC.cmake
build_tools/jq/: jq-macos-amd64
documentation/: documentation.html
documentation/css/: styles.css
documentation/js/: date.js
source/: .clang-format  CMakeLists.txt
source/cmake_scripts/libraries/: Asio.cmake  Catch2.cmake  PortAudio.cmake  Threads.cmake  boost.cmake  curl.cmake  cxxopts.cmake  fmt.cmake  nlohmann.cmake  spdlog.cmake  wxWidgets.cmake
source/cmake_scripts/other/: clangFormat.cmake  copy_dlls.cmake  copy_resources.cmake  doxygen.cmake  force_static_msvc.cmake
source/internal_libraries/: CMakeLists.txt
source/internal_libraries/lib_factorial/: CMakeLists.txt
source/internal_libraries/lib_factorial/include/: factorial.hpp
source/internal_libraries/lib_factorial/src/: factorial.cpp
source/internal_libraries/main/src/: main.cpp
source/unit_tests/: CMakeLists.txt
source/unit_tests/test_lib_factorial/: CMakeLists.txt
source/unit_tests/test_lib_factorial/include/: test_factorial.hpp
source/unit_tests/test_lib_factorial/src/: test_factorial.cpp
