# [[ Add Internal Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

# The "main" internal library is not included here because it is special.

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_factorial")

# Add more internal libraries as needed...

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Internal Libraries ]]
